--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,7 +21,20 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 21** (21/jun)
+<br><br>
+* **Aula 20** (16/jun)
+  + Implementação de filas de prioridade com heap
+    + Representação do heap
+    + Inserção
+    + Remoção
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade-handout.pdf" target="_blank">handouts</a>)
+<br><br>
 * **Aula 19** (14/jun)
+  + Comentários sobre Avaliação Somativa 2
+  + Filas de prioridade
+    + Formas de implementação
+    + Introdução a Heap (de máximo)
 <br><br>
 * **Aula 18** (07/jun)
   + Avaliação Somativa 2
