--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,7 +27,21 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 21** (21/jun)
+<br><br>
+* **Aula 20** (16/jun)
+  + Arquitetura do processador
+    + Caminho de dados e controle no pipeline
+  + *Leitura recomendada*:
+    + Seção 4.6
+    + <a href="4_arquitetura-processador_aula04.pdf" target="_blank">Slides</a>
+<br><br>
 * **Aula 19** (14/jun)
+  + Arquitetura do processador
+    + Introdução ao pipeline
+  + *Leitura recomendada*:
+    + Seção 4.5
+    + <a href="4_arquitetura-processador_aula03.pdf" target="_blank">Slides</a>
 <br><br>
 * **Aula 18** (07/jun)
   + Avaliação Somativa 2
