--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,7 +27,50 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 30** (21/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 29** (19/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 28** (14/jul)
+  + Avaliação Somativa Substitutiva
+<br><br>
+* **Aula 27** (12/jul)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 26** (07/jul)
+  + Dúvidas e exercícios
+<br><br>
+* **Aula 25** (05/jul)
+  + Dúvidas e exercícios
+<br><br>
+* **Aula 24** (30/jun)
+  + Hierarquia de memória
+    + Memória virtual
+  + *Leitura recomendada*
+    + Seção 5.7
+<br><br>
+* **Aula 23** (28/jun)
+  + Hierarquia de memória
+    + Memória cache
+    + Mapeamento direto por blocos
+    + Estratégias de escrita na cache
+  + *Leitura recomendada*
+    + Seçoẽs 5.3 e 5.4
+<br><br>
+* **Aula 22** (23/jun)
+  + Hierarquia de memória
+    + Memória cache
+    + Mapeamento direto
+<br><br>
 * **Aula 21** (21/jun)
+  + Hierarquia de memória
+    + Introdução
+    + Tecnologias de memória
+    + Introdução à memória cache
+  + *Leitura recomendada*:
+    + Seções 5.1 e 5.2
 <br><br>
 * **Aula 20** (16/jun)
   + Arquitetura do processador
