Atualizando página de EDA-2

--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,14 +21,49 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 30** (21/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 29** (19/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 28** (14/jul)
+  + Avaliação Somativa Substitutiva
+<br><br>
+* **Aula 27** (12/jul)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 26** (07/jul)
+<br><br>
+* **Aula 25** (05/jul)
+<br><br>
+* **Aula 24** (30/jun)
+  + Grafos
+    + Implementação com listas de adjacências
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade23-grafos-estrutura.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade23-grafos-estrutura-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
+<br><br>
+* **Aula 23** (28/jun)
+  + Grafos
+    + Implementação de operações com matrizes de adjacências
+    + O problema de indicar um amigo
+<br><br>
+* **Aula 22** (23/jun)
+  + Grafos
+    + Conceitos
+    + Representação com matrizes de adjacência
+<br><br>
 * **Aula 21** (21/jun)
+  + Algoritmos de ordenação lineares
+    + Ordenação por contagem
+    + Ordenação por distribuição
 <br><br>
 * **Aula 20** (16/jun)
   + Implementação de filas de prioridade com heap
     + Representação do heap
     + Inserção
     + Remoção
-  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade-handout.pdf" target="_blank">handouts</a>)
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade-handout.pdf" target="_blank">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 19** (14/jun)
   + Comentários sobre Avaliação Somativa 2
