Atualizando página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -231,7 +231,7 @@ www<br><br>
 
 * **Formativa 3**
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f3_2023_1" target="_blank">CD-MOJ</a>
-  + Disponível até 02/jul às 23h59
+  + Disponível até 10/jul às 23h59
 <br><br>
 * **Formativa 2**
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f2_2023_1" target="_blank">CD-MOJ</a>
@@ -240,3 +240,9 @@ www<br><br>
 * **Formativa 1**
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f1_2023_1" target="_blank">CD-MOJ</a>
   + Disponível até 13/abr às 23h59
+
+## Trabalho
+
++ Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_trab_2023_1" target="_blank">CD-MOJ</a>
++ Disponível até 16/jul às 23h59
+
