--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -19,6 +19,10 @@ exclude: true
 
 Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique [aqui](notas.htm) para acessar a planilha de notas (última atualização: 05/jul às 17:50).
+
 ## Aulas
 
 * **Aula 30** (21/jul)
