Atualizando página de EDA-2

--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -38,8 +38,19 @@ Clique [aqui](notas.htm) para acessar a planilha de notas (última atualização
   + Avaliação Somativa 3
 <br><br>
 * **Aula 26** (07/jul)
+  + Grafos
+    + Busca em profundidade
+    + Busca em largura
+  + *Leitura recomendada*
+    + <a href="" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 25** (05/jul)
+  + Grafos
+    + Caminhos
+    + Componentes conexas
+    + Algoritmos
+  + *Leitura recomendada*
+    + <a href="" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 24** (30/jun)
   + Grafos
