--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -42,7 +42,7 @@ Clique [aqui](notas.htm) para acessar a planilha de notas (última atualização
     + Busca em profundidade
     + Busca em largura
   + *Leitura recomendada*
-    + <a href="" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 25** (05/jul)
   + Grafos
@@ -50,7 +50,7 @@ Clique [aqui](notas.htm) para acessar a planilha de notas (última atualização
     + Componentes conexas
     + Algoritmos
   + *Leitura recomendada*
-    + <a href="" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 24** (30/jun)
   + Grafos
