--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -19,6 +19,10 @@ exclude: true
 
 Clique <a href="plano_fac_2023_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique <a href="notas.htm">aqui</a> para acessar a planilha de notas. 
+
 ## Livro-texto
 
 Todas as referências das aulas desta disciplina são do livro:
