--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -36,22 +36,30 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
 ## Aulas
 
 * **Aula 8** (22/jul)
+  + Apresentação final dos trabalhos
 <br><br>
 * **Aula 7** (15/jul)
+  + Dúvidas, exercícios, trabalho
 <br><br>
 * **Aula 6** (08/jul)
+  + Apresentação 1 dos trabalhos
 <br><br>
 * **Aula 5** (01/jul)
+  + Dúvidas, exercícios, trabalho
 <br><br>
 * **Aula 4** (24/jun)
+  + Dúvidas, exercícios, trabalho
 <br><br>
 * **Aula 3** (17/jun)
+  + Programação linear
+    + Método *Simplex* tabular
+  + *Leitura recomendada*: Seção 2.4 de Lachtermacher, 2018.
 <br><br>
 * **Aula 2** (10/jun)
   + Programação linear
     + Definições
     + Resolução analítica usando *Simplex*
-  + *Leitura recomendada*: Seções 1.1 e 1.2 de Lachtermacher, 2018.
+  + *Leitura recomendada*: Seções 2.1 e 2.2 de Lachtermacher, 2018.
 <br><br>
 * **Aula 1** (03/jun)
   + Apresentação da disciplina
@@ -69,6 +77,14 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
 A resolução das listas deverá ser enviado em formato PDF para o e-mail john.gardenghi@unb.br com o assunto: "[FPO] Lista N", onde N é o número da lista.
 
 ### Enunciados
+
+* **Lista 2**
+  + Implemente o método *Simplex* tabular na sua linguagem de programação de preferência.
+    + Seu programa deve receber um problema de programação linear como entrada, da forma de sua preferência.
+    + Você deve seguir o modelo padrão que consta no livro do Lachtermacher, 2018. Use os problemas dos exercícios da Seção 2.4 para depurar o seu código.
+    + O requisito básico é que, a cada iteração do método tabular, seu código deve imprimir a tabela do *Simplex*.
+    + Entregue, por e-mail, seu código fonte e instruções de como compilar e rodar com um exemplo qualquer.
+  + Prazo de entrega: 25/jul
 
 * **Lista 1**
   + [Enunciado](l1_modelagem.pdf)
