Atualizando página de EDA-2

--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,7 +21,7 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Notas
 
-Clique [aqui](notas.htm) para acessar a planilha de notas (última atualização: 05/jul às 17:50).
+Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
