Atualizando EDA-2 - Plano de ensino - Aulas de 20/mar a 27/mar

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -19,9 +19,46 @@ exclude: true
 
 ## Plano de ensino
 
-A ser publicado.
+Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
 
+* **Aula 4** (03/abr)
+<br><br>
+* **Aula 3** (27/mar)
+  + Ordenação por intercalação
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Prof. Paulo Feofiloff</a>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf">Prof. Rafael Schouery</a>(<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
+<br><br>
+* **Aula 2** (22/mar)
+  + Revisão
+    + Análise de complexidade
+    + Classes de complexidade (P e NP)
+    + Listas encadeadas
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a> (Prof. Paulo Feofiloff)
+    + <a href="https://towardsdatascience.com/the-math-behind-big-o-and-other-asymptotic-notations-64487889f33f" target="_blank">A matemática por trás da notação Big-O</a>
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a> (Prof. Paulo Feofiloff)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/lista-encadeada.html" target="_blank">Exercícios de listas encadeadas</a>
+    + Problemas do milênio
+      + <a href="https://pt.wikipedia.org/wiki/Problemas_do_Pr%C3%A9mio_Millennium" target="_blank">Wikipedia</a>
+      + <a href="https://www.claymath.org/millennium-problems/millennium-prize-problems" target="_blank">Página oficial</a>
+<br><br>
 * **Aula 1** (20/mar)
   + Apresentação da disciplina
+
+## Avaliações Formativas
+
+* **Formativa 1** - Listas encadeadas
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f1_2024_1" target="_blank">CD-MOJ</a>
+  + Disponível até 07/abr às 23h59
+
+## Referências básicas
+
+* <a href="https://www.ime.usp.br/~pf/algoritmos/index.html" target="_blank">Projeto de Algoritmos</a> (Prof. Paulo Feofiloff)
+<br><br>
+* <a href="https://www.ic.unicamp.br/~rafael/mc202.html" target="_blank">Estruturas de dados</a> (Prof. Rafael Schouery)
+<br><br>
+* <a href="https://www.brunoribas.com.br/apostila-eda/" target="_blank">Apostila de EDA-1 e EDA-2</a> (Prof. Bruno Ribas)
+  + Veja também o <a href="https://www.youtube.com/@ProfBrunoRibas" target="_blank">canal no Youtube</a>
