Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -50,7 +50,7 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Avaliações Formativas
 
-* **Formativa 1** - Listas encadeadas
+* **Formativa 1** - Revisão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f1_2024_1" target="_blank">CD-MOJ</a>
   + Disponível até 07/abr às 23h59
 
