Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -30,6 +30,7 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
   + *Leitura recomendada*
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Prof. Paulo Feofiloff</a>
     + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/mergesort.html" target="_blank">Prof. Bruno Ribas</a>
 <br><br>
 * **Aula 2** (22/mar)
   + Revisão
