Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -23,13 +23,27 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 6** (10/abr)
+<br><br>
+* **Aula 5** (05/abr)
+  + Quickselect
+  + Algoritmos de ordenação lineares
+    + Ordenação por contagem
+    + Ordenação por distribuição
+<br><br>
 * **Aula 4** (03/abr)
+  + Ordenação rápida (QuickSort)
+  + *Leitura recomendada*
+    + <a href="">Prof. Paulo Feofiloff</a>
+    + <a href="https://www.brunoribas.com.br/apostila-eda/quicksort.html" target="_blank">Prof. Bruno Ribas</a>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf" target="_blank">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
+    + <a href="https://www.geeksforgeeks.org/quick-sort/" target="_blank">Geeks for geeks</a>
 <br><br>
 * **Aula 3** (27/mar)
   + Ordenação por intercalação
   + *Leitura recomendada*
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Prof. Paulo Feofiloff</a>
-    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf" target="_blank">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
     + <a href="https://www.brunoribas.com.br/apostila-eda/mergesort.html" target="_blank">Prof. Bruno Ribas</a>
 <br><br>
 * **Aula 2** (22/mar)
