Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -30,6 +30,12 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
   + Algoritmos de ordenação lineares
     + Ordenação por contagem
     + Ordenação por distribuição
+  + *Leitura recomendada*
+    + QuickSelect
+      + <a href="https://www.brunoribas.com.br/apostila-eda/quicksort.html#org1aec290" target="_blank">Prof. Bruno Ribas</a>
+      + <a href="https://www.geeksforgeeks.org/quickselect-algorithm/" target="_blank">Geeks for geeks</a>
+    + Seção 2.7.2 do livro de Szwarcfiter e Markenzon (2010) (veja o [plano de ensino](plano_eda2_24_1.pdf)).
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/radix.html#contagem" target="_blank">Ordenação por contagem</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 4** (03/abr)
   + Ordenação rápida (QuickSort)
