--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -36,6 +36,8 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
       + <a href="https://www.geeksforgeeks.org/quickselect-algorithm/" target="_blank">Geeks for geeks</a>
     + Seção 2.7.2 do livro de Szwarcfiter e Markenzon (2010) (veja o [plano de ensino](plano_eda2_24_1.pdf)).
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/radix.html#contagem" target="_blank">Ordenação por contagem</a> (Prof. Paulo Feofiloff)
+  + Para executar:
+    + <a href="https://github.com/bcribas/benchmark-ordenacao" target="_blank">Benchmarking de ordenação</a> (Prof. Bruno Ribas)
 <br><br>
 * **Aula 4** (03/abr)
   + Ordenação rápida (QuickSort)
