Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -23,7 +23,19 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 9** (19/abr)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 8** (17/abr)
+<br><br>
+* **Aula 7** (12/abr)
+<br><br>
 * **Aula 6** (10/abr)
+  + O problema de busca
+    + Busca sequencial
+    + Busca binária
+    + Endereçamento direto
+  + Introdução às tabelas de dispersão (hash)
 <br><br>
 * **Aula 5** (05/abr)
   + Quickselect
