Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -13,7 +13,7 @@ exclude: true
 
 * **Período de aulas**: 18/03/2024 a 15/07/2024
 * **Horário das aulas**:
-  + Turma 01: quartas e sextas-feiras das 16h às 17h50 na S3 e S2
+  + Turma 01: quartas e sextas-feiras das 16h às 17h50 na S3
   + Turma 02: quartas e sextas-feiras das 10h às 11h50 na S9
 * **Atendimento do professor**: Sob agendamento
 
@@ -85,9 +85,13 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Avaliações Formativas
 
+* **Formativa 2** - Ordenação
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f2_2024_1" target="_blank">CD-MOJ</a>
+  + Disponível até 24/abr às 23h59
+
 * **Formativa 1** - Revisão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f1_2024_1" target="_blank">CD-MOJ</a>
-  + Disponível até 07/abr às 23h59
+  + Disponível até 10/abr às 23h59
 
 ## Referências básicas
 
