Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -23,12 +23,23 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+Além das referências básicas de cada aula, consulte também as
+referências no plano de ensino.
+
 * **Aula 9** (19/abr)
   + Avaliação Somativa 1
 <br><br>
 * **Aula 8** (17/abr)
 <br><br>
 * **Aula 7** (12/abr)
+  + Tabelas de espalhamento
+    + Representação
+    + Função de hash modular
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
+    + Primos de Mersenne
+    + <a href="https://pt.wikipedia.org/wiki/Primo_de_Mersenne" target="_blank">Wikipedia</a>
+    + <a href="https://impa.br/noticias/numeros-primos-de-mersenne-visando-o-infinito/">Prof. Marcelo Viana</a>
 <br><br>
 * **Aula 6** (10/abr)
   + O problema de busca
