--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -23,8 +23,8 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
-Além das referências básicas de cada aula, consulte também as
-referências no plano de ensino.
+Além das leituras recomendadas de cada aula, consulte também os
+tópicos associados nas referências no plano de ensino.
 
 * **Aula 9** (19/abr)
   + Avaliação Somativa 1
@@ -38,8 +38,8 @@ referências no plano de ensino.
   + *Leitura recomendada*:
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
     + Primos de Mersenne
-    + <a href="https://pt.wikipedia.org/wiki/Primo_de_Mersenne" target="_blank">Wikipedia</a>
-    + <a href="https://impa.br/noticias/numeros-primos-de-mersenne-visando-o-infinito/">Prof. Marcelo Viana</a>
+      + <a href="https://pt.wikipedia.org/wiki/Primo_de_Mersenne" target="_blank">Wikipedia</a>
+      + <a href="https://impa.br/noticias/numeros-primos-de-mersenne-visando-o-infinito/">Prof. Marcelo Viana</a>
 <br><br>
 * **Aula 6** (10/abr)
   + O problema de busca
