Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -30,11 +30,14 @@ tópicos associados nas referências no plano de ensino.
   + Avaliação Somativa 1
 <br><br>
 * **Aula 8** (17/abr)
+  + Tabelas de espalhamento
+    + Endereçamento aberto
 <br><br>
 * **Aula 7** (12/abr)
   + Tabelas de espalhamento
     + Representação
     + Função de hash modular
+    + Encadeamento separado
   + *Leitura recomendada*:
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
     + Primos de Mersenne
