--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -30,11 +30,11 @@ tópicos associados nas referências no plano de ensino.
   + Avaliação Somativa 1
 <br><br>
 * **Aula 8** (17/abr)
-  + Tabelas de espalhamento
+  + Tabelas de dispersão
     + Endereçamento aberto
 <br><br>
 * **Aula 7** (12/abr)
-  + Tabelas de espalhamento
+  + Tabelas de dispersão
     + Representação
     + Função de hash modular
     + Encadeamento separado
