Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -26,6 +26,24 @@ Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o pla
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 12** (03/mai)
+<br><br>
+* **Aula 11** (26/abr)
+  + Árvores
+    + Percurso de profundidade e largura
+  + Árvores binárias de busca
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores binárias</a> (Prof. Paulo Feofiloff)
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores binárias de busca</a> (Prof. Paulo Feofiloff)
+<br><br>
+* **Aula 10** (24/abr)
+  + Correção da Avaliação Somativa 1
+  + Árvores
+    + Conceitos
+    + Representação
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores binárias</a> (Prof. Paulo Feofiloff)
+<br><br>
 * **Aula 9** (19/abr)
   + Avaliação Somativa 1
 <br><br>
@@ -101,7 +119,7 @@ tópicos associados nas referências no plano de ensino.
 
 * **Formativa 2** - Ordenação
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f2_2024_1" target="_blank">CD-MOJ</a>
-  + Disponível até 24/abr às 23h59
+  + Disponível até ~~24/abr~~28/abr às 23h59
 <br><br>
 * **Formativa 1** - Revisão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f1_2024_1" target="_blank">CD-MOJ</a>
