Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -9,7 +9,18 @@ exclude: true
 * **Professor**: John L. Gardenghi
   + Sala 22
   + *E-mail*: john.gardenghi@unb.br
-  + *Telegram*: @johngardenghi
+  + *Telegram*: <a href="https://t.me/johngardenghi" target="_blank">@johngardenghi</a>
+
+* **Monitores**:
+  + Caio Felipe Rocha
+    + Atendimento online
+    + Telegram: <a href="https://t.me/caio_felipee" target="_blank">@caio_felipee</a>
+  + João Victor Farias
+    + Atendimento online
+    + Telegram: <a href="https://t.me/beyond_magic" target="_blank">@beyond_magic</a>
+  + Zenilda Vieira
+    + Atendimento presencial ou via Teams sob agendamento
+    + Telegram: <a href="https://t.me/ZenildaVieira" target="_blank">@ZenildaVieira</a>
 
 * **Período de aulas**: 18/03/2024 a 15/07/2024
 * **Horário das aulas**:
