Atualizando página de EDA-2
- Aulas
- Inserindo planilha de notas parciais para Turmas 01 e 02.

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -32,20 +32,30 @@ exclude: true
 
 Clique <a href="plano_eda2_24_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Notas da [Turma 01](notas_t01.htm) e [Turma 02](notas_t02.htm).
+
 ## Aulas
 
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 14** (10/mai)
+<br><br>
+* **Aula 13** (08/mai)
+<br><br>
 * **Aula 12** (03/mai)
+  + Árvores binárias de busca
+    + Representação, busca, inserção e introdução à remoção
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores binárias de busca</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 11** (26/abr)
   + Árvores
     + Percurso de profundidade e largura
-  + Árvores binárias de busca
   + *Leitura recomendada*
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores binárias</a> (Prof. Paulo Feofiloff)
-    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores binárias de busca</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 10** (24/abr)
   + Correção da Avaliação Somativa 1
