Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -41,9 +41,19 @@ Notas da [Turma 01](notas_t01.htm) e [Turma 02](notas_t02.htm).
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 15** (15/mai)
+<br><br>
 * **Aula 14** (10/mai)
+  + Árvores rubro-negras esquerdistas
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/estruturas-de-dados/aulas/st-redblack.html" target="_blank"></a> (Prof. Paulo Feofiloff)
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade17-arvores-balanceadas-handout.pdf" target="_blank"></a> (Prof. Rafael Schouery)
 <br><br>
 * **Aula 13** (08/mai)
+  + Árvores binárias de busca
+    + Remoção
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores binárias de busca</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 12** (03/mai)
   + Árvores binárias de busca
