Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -46,8 +46,8 @@ tópicos associados nas referências no plano de ensino.
 * **Aula 14** (10/mai)
   + Árvores rubro-negras esquerdistas
   + *Leitura recomendada*
-    + <a href="https://www.ime.usp.br/~pf/estruturas-de-dados/aulas/st-redblack.html" target="_blank"></a> (Prof. Paulo Feofiloff)
-    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade17-arvores-balanceadas-handout.pdf" target="_blank"></a> (Prof. Rafael Schouery)
+    + <a href="https://www.ime.usp.br/~pf/estruturas-de-dados/aulas/st-redblack.html" target="_blank">Prof. Paulo Feofiloff</a>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade17-arvores-balanceadas-handout.pdf" target="_blank">Prof. Rafael Schouery</a>
 <br><br>
 * **Aula 13** (08/mai)
   + Árvores binárias de busca
