Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -41,10 +41,24 @@ Notas da [Turma 01](notas_t01.htm) e [Turma 02](notas_t02.htm).
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 18** (24/mai)
+  + **Avaliação Somativa 2**
+<br><br>
+* **Aula 17** (22/mai)
+<br><br>
+* **Aula 16** (17/mai)
+<br><br>
 * **Aula 15** (15/mai)
+  + Árvores rubro-negras esquerdistas
+    + Inserção
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade17-arvores-balanceadas-handout.pdf" target="_blank">Prof. Rafael Schouery</a>
+    + <a href="https://www.geeksforgeeks.org/deletion-in-red-black-tree/" target="_blank">Remoção em árvores rubro-negras</a>
 <br><br>
 * **Aula 14** (10/mai)
   + Árvores rubro-negras esquerdistas
+    + Definição
+    + Representação
   + *Leitura recomendada*
     + <a href="https://www.ime.usp.br/~pf/estruturas-de-dados/aulas/st-redblack.html" target="_blank">Prof. Paulo Feofiloff</a>
     + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade17-arvores-balanceadas-handout.pdf" target="_blank">Prof. Rafael Schouery</a>
@@ -76,7 +90,7 @@ tópicos associados nas referências no plano de ensino.
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores binárias</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 9** (19/abr)
-  + Avaliação Somativa 1
+  + **Avaliação Somativa 1**
 <br><br>
 * **Aula 8** (17/abr)
   + Tabelas de dispersão
@@ -148,6 +162,10 @@ tópicos associados nas referências no plano de ensino.
 
 ## Avaliações Formativas
 
+* **Formativa 3** - Hash
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f3_2024_1" target="_blank">CD-MOJ</a>
+  + Disponível até 26/mai às 23h59
+<br><br>
 * **Formativa 2** - Ordenação
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f2_2024_1" target="_blank">CD-MOJ</a>
   + Disponível até ~~24/abr~~28/abr às 23h59
