--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -45,8 +45,12 @@ tópicos associados nas referências no plano de ensino.
   + **Avaliação Somativa 2**
 <br><br>
 * **Aula 17** (22/mai)
+  + Resolução de dúvidas e exercícios
 <br><br>
 * **Aula 16** (17/mai)
+  + Filas de prioridade usando **heap** de máximo
+  + **Leitura recomendada**
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade18-fila-prioridade.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade18-fila-prioridade-handout.pdf" target="_blank">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 15** (15/mai)
   + Árvores rubro-negras esquerdistas
@@ -162,6 +166,10 @@ tópicos associados nas referências no plano de ensino.
 
 ## Avaliações Formativas
 
+* **Formativa 4** - Árvores
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f4_2024_1" target="_blank">CD-MOJ</a>
+  + Disponível até 02/jun às 23h59
+<br><br>
 * **Formativa 3** - Hash
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f3_2024_1" target="_blank">CD-MOJ</a>
   + Disponível até 26/mai às 23h59
