Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -48,8 +48,8 @@ tópicos associados nas referências no plano de ensino.
   + Resolução de dúvidas e exercícios
 <br><br>
 * **Aula 16** (17/mai)
-  + Filas de prioridade usando **heap** de máximo
-  + **Leitura recomendada**
+  + Filas de prioridade usando *heap* de máximo
+  + *Leitura recomendada*
     + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade18-fila-prioridade.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade18-fila-prioridade-handout.pdf" target="_blank">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 15** (15/mai)
