Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -41,6 +41,25 @@ Notas da [Turma 01](notas_t01.htm) e [Turma 02](notas_t02.htm).
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 21** (14/jun)
+<br><br>
+* **Aula 20** (12/jun)
+  + Representação de grafos
+    + Matriz de Adjecências
+    + Lista de Adjacências
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade23-grafos-estrutura-handout.pdf" target="_blank">Prof. Rafael Schouery</a>
+<br><br>
+* ~~**Aula 20** (07/jun)~~
+  + Não houve aula por compromisso do professor
+<br><br>
+* ~~**Aula 20** (05/jun)~~
+  + Não houve aula por compromisso do professor
+<br><br>
+* **Aula 19** (29/mai)
+  + Correção da Avaliação Somativa 2
+  + Introdução aos grafos
+<br><br>
 * **Aula 18** (24/mai)
   + **Avaliação Somativa 2**
 <br><br>
@@ -168,7 +187,7 @@ tópicos associados nas referências no plano de ensino.
 
 * **Formativa 4** - Árvores
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f4_2024_1" target="_blank">CD-MOJ</a>
-  + Disponível até 02/jun às 23h59
+  + Disponível até ~~02/jun~~16/jun às 23h59
 <br><br>
 * **Formativa 3** - Hash
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f3_2024_1" target="_blank">CD-MOJ</a>
