--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -41,6 +41,21 @@ Notas da [Turma 01](notas_t01.htm) e [Turma 02](notas_t02.htm).
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 25** (28/jun)
+  + **Avaliação Somativa Substitutiva**
+<br><br>
+* **Aula 24** (26/jun)
+  + **Avaliação Somativa 3**
+<br><br>
+* **Aula 23** (21/jun)
+<br><br>
+* **Aula 22** (19/jun)
+  + Percursos em grafos
+    + Busca em profundidade (DFS)
+    + Busca em largura (BFS)
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf" target="_blank">handouts</a>) (Prof. Rafael Schouery)
+<br><br>
 * **Aula 21** (14/jun)
 <br><br>
 * **Aula 20** (12/jun)
