Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -57,6 +57,12 @@ tópicos associados nas referências no plano de ensino.
     + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade24-grafos-percursos-handout.pdf" target="_blank">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 21** (14/jun)
+  + Manipulação básica de grafos
+  + Alguns algoritmos simples
+    + Vértice de maior grau
+    + Recomendação de conexão
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade23-grafos-estrutura-handout.pdf" target="_blank">Prof. Rafael Schouery</a>
 <br><br>
 * **Aula 20** (12/jun)
   + Representação de grafos
