Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -48,6 +48,11 @@ tópicos associados nas referências no plano de ensino.
   + **Avaliação Somativa 3**
 <br><br>
 * **Aula 23** (21/jun)
+  + Aplicações de DFS
+    + Componentes conexas
+    + Ordenação topológica
+  + *Leitura recomendada*
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade25-grafos-algoritmos.pdf" target="_blank">Slides</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade25-grafos-algoritmos-handout.pdf" target="_blank">handouts</a>) (Prof. Rafael Schouery)
 <br><br>
 * **Aula 22** (19/jun)
   + Percursos em grafos
