Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -41,6 +41,21 @@ Notas da [Turma 01](notas_t01.htm) e [Turma 02](notas_t02.htm).
 Além das leituras recomendadas de cada aula, consulte também os
 tópicos associados nas referências no plano de ensino.
 
+* **Aula 29** (12/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 28** (10/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 27** (05/jul)
+  + Revisão de notas e faltas
+<br><br>
+* **Aula 26** (03/jul)
+  + **Avaliação de Recuperação**
+    + Turma 01: Laboratório I10
+    + Turma 02: Laboratório S10
+    + Individual e sem consulta
+<br><br>
 * **Aula 25** (28/jun)
   + **Avaliação Somativa Substitutiva**
 <br><br>
