Atualizando página de EDA-2

--- a/ensino/eda2-2024-1.md
+++ b/ensino/eda2-2024-1.md
@@ -226,7 +226,11 @@ tópicos associados nas referências no plano de ensino.
 
 ## Avaliações Formativas
 
-* **Formativa 4** - Árvores
+* **Formativa 5** - Grafos
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f5_2024_1" target="_blank">CD-MOJ</a>
+  + Disponível até 01/jul às 23h59
+<br><br>*
+ **Formativa 4** - Árvores
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f4_2024_1" target="_blank">CD-MOJ</a>
   + Disponível até ~~02/jun~~16/jun às 23h59
 <br><br>
