Adicionando planos de ensino

--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -11,17 +11,22 @@ exclude: true
   + *E-mail*: john.gardenghi@unb.br
   + *Telegram*: <a href="https://t.me/johngardenghi" target="_blank">@johngardenghi</a>
 
+* **Monitores**:
+  + Caio Felipe (<a href="https://t.me/caio_felipee" target="_blank">@caio_felipee</a>)
+  + Caio Falcão (<a href="https://t.me/caio_habibe" target="_blank">@caio_habibe</a>)
+  + Mauricio Ferreira
+
 * **Período de aulas**: 14/10/2024 a 22/02/2025
 * **Horário das aulas**: quartas e sextas-feiras das 14h às 15h50 na sala I9
 * **Atendimento do professor**: Sob agendamento
 
 ## Plano de ensino
 
-A definir.
+Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
 
-* **Aula 1** (16/10)
+* **Aula 1** (16/out)
   + Apresentação da disciplina
 
 ## Referências básicas
