--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -11,17 +11,19 @@ exclude: true
   + *E-mail*: john.gardenghi@unb.br
   + *Telegram*: <a href="https://t.me/johngardenghi" target="_blank">@johngardenghi</a>
 
+* **Monitor**: Bruno Martins
+
 * **Período de aulas**: 14/10/2024 a 22/02/2025
 * **Horário das aulas**: quartas e sextas-feiras das 16h às 17h50 na sala S3
 * **Atendimento do professor**: Sob agendamento
 
 ## Plano de ensino
 
-A definir.
+Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
 
-* **Aula 1** (16/10)
+* **Aula 1** (16/out)
   + Apresentação da disciplina
 
 ## Referência básica
