--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -12,6 +12,7 @@ exclude: true
   + *Telegram*: <a href="https://t.me/johngardenghi" target="_blank">@johngardenghi</a>
 
 * **Monitores**:
+  + Arthur Ribeiro (<a href="https://t.me/artrsousa" target="_blank">@artrsousa</a>)
   + Caio Felipe (<a href="https://t.me/caio_felipee" target="_blank">@caio_felipee</a>)
   + Caio Falcão (<a href="https://t.me/caio_habibe" target="_blank">@caio_habibe</a>)
   + Mauricio Ferreira
