--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -15,7 +15,7 @@ exclude: true
   + Arthur Ribeiro (<a href="https://t.me/artrsousa" target="_blank">@artrsousa</a>)
   + Caio Felipe (<a href="https://t.me/caio_felipee" target="_blank">@caio_felipee</a>)
   + Caio Falcão (<a href="https://t.me/caio_habibe" target="_blank">@caio_habibe</a>)
-  + Mauricio Ferreira
+  + Mauricio Ferreira (<a href="https://t.me/mauriciofearaujo" target="_blank">@mauriciofearaujo</a>)
 
 * **Período de aulas**: 14/10/2024 a 22/02/2025
 * **Horário das aulas**: quartas e sextas-feiras das 14h às 15h50 na sala I9
