Atualizando páginas de EDA-2 e FAC

--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -23,6 +23,56 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
+* **Aula 7** (13/nov)
+  + Linguagem de montagem
+    + Laços
+    + Procedimentos
+  + *Leitura recomendada*:
+    + Seções 2.7 e 2.8
+<br><br>
+* **Aula 6** (01/nov)
+  + Linguagem de montagem
+    + Instruções de desvio
+  + *Leitura recomendada*:
+    + Seção 2.7
+<br><br>
+* **Aula 5** (03/out)
+  + Linguagem de montagem
+    + Operações lógicas e deslocamento
+      + Máscaras
+  + *Leitura recomendada*:
+    + Seção 2.6
+<br><br>
+* **Aula 4** (25/out)
+  + Linguagem de montagem
+    + Representação de inteiros binários
+    + Extensão de sinal
+    + Formato de instruções
+  + *Leitura recomendada*:
+    + Seções 2.4 e 2.5
+<br><br>
+* **Aula 3** (23/out)
+  + Linguagem de montagem
+    + Instruções de acesso à memória
+    + Instruções imediatas
+  + *Leitura recomendada*:
+    + Seção 2.3
+<br><br>
+* **Aula 2** (18/out)
+  + Linguagem de montagem
+    + Instruções aritméticas
+    + Registradores
+    + Estrutura de um programa em assembly MIPS
+    + Pseudoinstruções úteis
+    + *Syscalls*
+  + *Leitura recomendada*:
+    + Seções 2.1 e 2.2
+    + <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
+    + <a href="https://www.doc.ic.ac.uk/lab/secondyear/spim/node8.html" target="_blank">Tabela de *syscalls*</a>
+    + <a href="https://docs.microsoft.com/pt-br/windows/wsl/install" target="_blank">Como instalar o WSL</a>
+    + <a href="https://spimsimulator.sourceforge.net/" target="_blank">Simulador SPIM</a>
+    + <a href="https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-vscode" target="_blank">Usando VSCode e WSL</a>
+<br><br>
 * **Aula 1** (16/out)
   + Apresentação da disciplina
 
