--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -16,6 +16,7 @@ exclude: true
   + Caio Felipe (<a href="https://t.me/caio_felipee" target="_blank">@caio_felipee</a>)
   + Caio Falcão (<a href="https://t.me/caio_habibe" target="_blank">@caio_habibe</a>)
   + Mauricio Ferreira (<a href="https://t.me/mauriciofearaujo" target="_blank">@mauriciofearaujo</a>)
+  + Kathlyn Lara (<a href="https://t.me/klmurussi" target="_blank">@klmurussi</a>)
 
 * **Período de aulas**: 14/10/2024 a 22/02/2025
 * **Horário das aulas**: quartas e sextas-feiras das 14h às 15h50 na sala I9
@@ -27,8 +28,69 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 7** (13/nov)
+  + Tabelas de dispersão
+    + Representação
+    + Função de hash modular
+    + Encadeamento separado
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
+    + Primos de Mersenne
+      + <a href="https://pt.wikipedia.org/wiki/Primo_de_Mersenne" target="_blank">Wikipedia</a>
+      + <a href="https://impa.br/noticias/numeros-primos-de-mersenne-visando-o-infinito/">Prof. Marcelo Viana</a>
+<br><br>
+* **Aula 6** (01/nov)
+  + O problema de busca
+    + Busca sequencial
+    + Busca binária
+  + Tabelas de dispersão (hashing)
+    + Endereçamento direto
+<br><br>
+* **Aula 5** (30/out)
+  + Ordenação rápida (QuickSort)
+  + Quickselect
+  + *Leitura recomendada*
+    + QuickSelect
+      + <a href="https://www.brunoribas.com.br/apostila-eda/quicksort.html#org1aec290" target="_blank">Prof. Bruno Ribas</a>
+      + <a href="https://www.geeksforgeeks.org/quickselect-algorithm/" target="_blank">Geeks for geeks</a>
+<br><br>
+* **Aula 4** (25/out)
+  + Ordenação rápida (QuickSort)
+  + *Leitura recomendada*
+    + <a href="">Prof. Paulo Feofiloff</a>
+    + <a href="https://www.brunoribas.com.br/apostila-eda/quicksort.html" target="_blank">Prof. Bruno Ribas</a>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf" target="_blank">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
+    + <a href="https://www.geeksforgeeks.org/quick-sort/" target="_blank">Geeks for geeks</a>
+<br><br>
+* **Aula 3** (23/out)
+  + Ordenação por intercalação
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Prof. Paulo Feofiloff</a>
+    + <a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick.pdf" target="_blank">Prof. Rafael Schouery</a> (<a href="https://www.ic.unicamp.br/~rafael/slides/mc202/unidade20-ordenacao-merge-quick-handout.pdf" target="_blank">handouts</a>)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/mergesort.html" target="_blank">Prof. Bruno Ribas</a>
+<br><br>
+* **Aula 2** (18/out)
+  + Revisão
+    + Análise de complexidade
+    + Classes de complexidade (P e NP)
+    + Listas encadeadas
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a> (Prof. Paulo Feofiloff)
+    + <a href="https://towardsdatascience.com/the-math-behind-big-o-and-other-asymptotic-notations-64487889f33f" target="_blank">A matemática por trás da notação Big-O</a>
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a> (Prof. Paulo Feofiloff)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/lista-encadeada.html" target="_blank">Exercícios de listas encadeadas</a>
+    + Problemas do milênio
+      + <a href="https://pt.wikipedia.org/wiki/Problemas_do_Pr%C3%A9mio_Millennium" target="_blank">Wikipedia</a>
+      + <a href="https://www.claymath.org/millennium-problems/" target="_blank">Página oficial</a>
+<br><br>
 * **Aula 1** (16/out)
   + Apresentação da disciplina
+
+## Avaliações Formativas
+
+* **Formativa 1** - Revisão
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f1_2024_2" target="_blank">CD-MOJ</a>
+  + Disponível até 30/out às 23:59
 
 ## Referências básicas
 
