Atualizando página de EDA-2

--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -28,13 +28,21 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 9** (27/nov)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 8** (22/nov)
+  + Tabelas de dispersão
+    + Implementação usando Encadeamento Separado e Endereçamento Aberto
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
+<br><br>    
 * **Aula 7** (13/nov)
   + Tabelas de dispersão
     + Representação
     + Função de hash modular
-    + Encadeamento separado
+    + Aplicações
   + *Leitura recomendada*:
-    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
     + Primos de Mersenne
       + <a href="https://pt.wikipedia.org/wiki/Primo_de_Mersenne" target="_blank">Wikipedia</a>
       + <a href="https://impa.br/noticias/numeros-primos-de-mersenne-visando-o-infinito/">Prof. Marcelo Viana</a>
