--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -33,7 +33,7 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 <br><br>
 * **Aula 8** (22/nov)
   + Tabelas de dispersão
-    + Implementação usando Encadeamento Separado e Endereçamento Aberto
+    + Implementação usando Encadeamento Separado
   + *Leitura recomendada*:
     + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Prof. Paulo Feofiloff</a>
 <br><br>    
