Atualizando slides de FAC

--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -67,7 +67,6 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
     + *Syscalls*
   + *Leitura recomendada*:
     + Seções 2.1 e 2.2
-    + <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
     + <a href="https://www.doc.ic.ac.uk/lab/secondyear/spim/node8.html" target="_blank">Tabela de *syscalls*</a>
     + <a href="https://docs.microsoft.com/pt-br/windows/wsl/install" target="_blank">Como instalar o WSL</a>
     + <a href="https://spimsimulator.sourceforge.net/" target="_blank">Simulador SPIM</a>
@@ -79,3 +78,5 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 ## Referência básica
 
 > D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
+
+> <a href="../slides_fac/" target="_blank">Alguns slides</a> sobre o conteúdo passado ao longo da disciplina (resumo do livro).
