--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -79,4 +79,4 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 > D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
 
-> <a href="slides_fac" target="_blank">Alguns slides</a> sobre o conteúdo passado ao longo da disciplina (resumo do livro).
+> <a href="../slides_fac" target="_blank">Alguns slides</a> sobre o conteúdo passado ao longo da disciplina (resumo do livro).
