--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -23,6 +23,16 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
+* **Aula 10** (29/nov)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 9** (27/nov)
+  + Linguagem de montagem
+<br><br>
+* **Aula 8** (22/nov)
+  + Linguagem de montagem
+    + Procedimentos (com exemplos)
+<br><br>
 * **Aula 7** (13/nov)
   + Linguagem de montagem
     + Laços
