Atualizando página de EDA-2 e FAC

--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -28,6 +28,23 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 13** (11/dez)
+<br><br>
+* **Aula 12** (06/dez)
+  + Árvores binárias
+    + Conceitos básicos
+    + Percursos em árvores
+      + Percurso em largura
+<br><br>
+* **Aula 11** (04/dez)
+  + Árvores
+    + Conceitos básicos
+<br><br>
+* **Aula 10** (29/nov)
+  + Correção da Somativa 1
+  + Tabelas de dispersão
+    + Endereçamento Aberto com Sondagem Linear
+<br><br>
 * **Aula 9** (27/nov)
   + Avaliação Somativa 1
 <br><br>
