--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -11,7 +11,7 @@ exclude: true
   + *E-mail*: john.gardenghi@unb.br
   + *Telegram*: <a href="https://t.me/johngardenghi" target="_blank">@johngardenghi</a>
 
-* **Monitor**: Bruno Martins
+* **Monitor**: Bruno Martins (<a href="https://t.me/brunmartins" target="_blank">@brunmartins</a>)
 
 * **Período de aulas**: 14/10/2024 a 22/02/2025
 * **Horário das aulas**: quartas e sextas-feiras das 16h às 17h50 na sala S3
@@ -23,6 +23,17 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
+* **Aula 13** (11/dez)
+<br><br>
+* **Aula 12** (06/dez)
+  + Aritmética Computacional
+    + Representação de sinais
+<br><br>
+* **Aula 11** (04/dez)
+  + Correção da Somativa 1
+  + Aritmética Computacional
+    + Introdução
+<br><br>
 * **Aula 10** (29/nov)
   + Avaliação Somativa 1
 <br><br>
