Atualizando página de FAC

--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -23,7 +23,33 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
+* **Aula 17** (10/01)
+  + Avaliação Somativa 2
+<br><br>
+* **Aula 16** (08/01)
+<br><br>
+* ~~**Aula 16** (20/dez)~~
+  + Aula suspensa
+<br><br>
+* **Aula 15** (18/dez)
+  + Aritmética Computacional
+    + Algoritmo de divisão
+  + *Vídeos recomendados*:
+    + <a href="https://youtu.be/g--8JvARW-M" target="_blank">Parte 1</a>
+    + <a href="https://youtu.be/0ujfDQOn0qA" target="_blank">Parte 2</a>
+    + <a href="https://youtu.be/2cr1CukCFXQ" target="_blank">Parte 3</a>
+<br><br>
+* **Aula 14** (13/dez)
+  + Aritmética Computacional
+    + Algoritmo de multiplicação
+  + *Vídeos recomendados*:
+    + <a href="https://youtu.be/Euor-qcblkU" target="_blank">Parte 1</a>
+    + <a href="https://youtu.be/_q5BiGhbQoY" target="_blank">Parte 2</a>
+    + <a href="https://youtu.be/wTDcaONSRug" target="_blank">Parte 3</a>
+<br><br>
 * **Aula 13** (11/dez)
+  + Aritmética Computacional
+    + Overflow na adição
 <br><br>
 * **Aula 12** (06/dez)
   + Aritmética Computacional
