Atualizando página de EDA-2

--- a/ensino/eda2-2024-2.md
+++ b/ensino/eda2-2024-2.md
@@ -28,7 +28,29 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 17** (10/jan)
+  + Avaliação Somativa 2
+<br><br>
+* **Aula 16** (08/jan)
+<br><br>
+* ~~**Aula 16** (20/dez)~~
+  + Aula suspensa
+<br><br>
+* **Aula 15** (18/dez)
+  + Árvore binária de busca
+    + Antecessor e sucessor
+    + Remoção
+<br><br>
+* **Aula 14** (13/dez)
+  + Árvore binária de busca
+    + Criação, busca e inserção
+    + Antecessor e sucessor
+<br><br>
 * **Aula 13** (11/dez)
+  + Árvores binárias
+    + Percursos em profundidade
+  + Árvore binária de busca
+    + Definição e conceitos básicos
 <br><br>
 * **Aula 12** (06/dez)
   + Árvores binárias
@@ -112,6 +134,10 @@ Clique <a href="plano_eda2_24_2.pdf" target="_blank">aqui</a> para acessar o pla
   + Apresentação da disciplina
 
 ## Avaliações Formativas
+
+* **Formativa 2** - Hash e Árvores Binárias de Busca
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f2_2024_2" target="_blank">CD-MOJ</a>
+  + Disponível até 17/jan às 23:59
 
 * **Formativa 1** - Revisão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_f1_2024_2" target="_blank">CD-MOJ</a>
