--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -23,10 +23,10 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Aulas
 
-* **Aula 17** (10/01)
+* **Aula 17** (10/jan)
   + Avaliação Somativa 2
 <br><br>
-* **Aula 16** (08/01)
+* **Aula 16** (08/jan)
 <br><br>
 * ~~**Aula 16** (20/dez)~~
   + Aula suspensa
