--- a/ensino/fac-2024-2.md
+++ b/ensino/fac-2024-2.md
@@ -122,6 +122,16 @@ Clique <a href="plano_fac_2024_2.pdf" target="_blank">aqui</a> para acessar o pl
 * **Aula 1** (16/out)
   + Apresentação da disciplina
 
+## Avaliações Formativas
+
+* **Formativa 2** - Aritmética Computacional
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_f2_2024_2" target="_blank">CD-MOJ</a>
+  + Disponível até 17/jan às 23:59
+
+* **Formativa 1** - Assembly MIPS
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_f1_2024_2" target="_blank">CD-MOJ</a>
+  + Disponível até 08/dez às 23:59
+
 ## Referência básica
 
 > D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
